<resources>
    <string name="app_name">Assignment5</string>

    <!-- Strings related to login -->
    <string name="nickname">Nickname</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="register">Don\'t have an account? Register here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_choose_location">Map</string>
    <string name="pwd">Password</string>
    <string name="location">Country/State</string>
    <string name="city">City</string>
    <string name="year">Year</string>
    <string name="coordinates">Longitude/Latitude</string>

    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New User</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_current_user_loc_map">Map</string>
    <string name="home_town">Home Town</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_display_user_map">Map</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="send">Send</string>
    <string name="no_records">No Records</string>
    <string name="less">Less</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
</resources>
