<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_users_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shara.assignment5.DisplayUserMap">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        map:cameraBearing="112.5"
        map:cameraTargetLat="32.772399"
        map:cameraTargetLng="-117.072286"
        map:cameraTilt="0"
        map:cameraZoom="0"
        map:uiCompass="true"
        map:uiRotateGestures="true"
        map:uiScrollGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="true"
        map:uiZoomGestures="true"
        tools:context=".MapsActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        tools:ignore="ButtonStyle"
        android:layout_marginStart="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        tools:ignore="ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/filter"
        android:layout_marginStart="93dp" />

    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_more"
        tools:ignore="ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/clear"
        android:layout_marginStart="97dp" />

    <Button
        android:id="@+id/less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_less"
        tools:ignore="ButtonStyle"
        android:layout_marginStart="83dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/more" />


</RelativeLayout>