<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.assignment5.LoginActivity"
    android:id="@+id/email_login_form">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_below="@+id/password"
        android:layout_marginTop="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/register"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blue_A700"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
